--- a/threejs/index.html
+++ b/threejs/index.html
@@ -5,7 +5,7 @@
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
 		</style>
-		<script src="js/three.min.js"></script>
+		<script src="../js/three.min.js"></script>
 	</head>
 	<body>
 <script>
