--- a/threejs/threejs_font.html
+++ b/threejs/threejs_font.html
@@ -37,9 +37,9 @@ function threejs_clock()
 		
 		// how to create and set camera
         camera =  new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, .1, 500);
-		camera.position.x = -13;
-        camera.position.y = 10;
-        camera.position.z = 17.7;   
+		//camera.position.x = -13;
+        //camera.position.y = 10;
+        //camera.position.z = 17.7;   
         camera.lookAt(scene.position);
 		
 		// how to create and set renderer
