--- a/threejs/threejs_font.html
+++ b/threejs/threejs_font.html
@@ -199,8 +199,9 @@ function threejs_clock()
         
         for (var e = 0; e < 24; e++)
 		{
-            hArray[e] = new THREE.Mesh( new THREE.TextGeometry(setZeros(e), {font: font, size:5, height:1, name: e + 'h'}));//, mat);
-            hArray[e].position.set(-10,0,0);     
+            hArray[e] = new THREE.Mesh( new THREE.TextGeometry(setZeros(e), {font: font, size:5, height:1}));//, mat);
+			hArray[e].name = e + 'h';
+            hArray[e].position.set(-10,0,0);
         }      
 		
 		} );   
