--- a/threejs/threejs_popup_window.html
+++ b/threejs/threejs_popup_window.html
@@ -30,8 +30,8 @@
     <div id ="webGL-container" style="z-index:-9;"></div>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/three.js"></script>
-    <script type="text/javascript" src="../js/OrbitControls.js"></script>       
+    <script type="text/javascript" src="../js/three.min.js"></script>
+    <script type="text/javascript" src="../js/controls/OrbitControls.js"></script>       
     </body>
 	
 	<script>
