--- a/threejs/threejs_ani.html
+++ b/threejs/threejs_ani.html
@@ -18,7 +18,7 @@ $(function(){
     var scene, camera, renderer;
     var spotLight, hemi;
     var SCREEN_WIDTH, SCREEN_HEIGHT;
-    var loader, model, animation;
+    var loader, model, mixer;
 	
 	var rotationX  = 0.0;
 	var rotationY  = 0.0;
